--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p>Kami dapat memperbarui Kebijakan Privasi kami dari waktu ke waktu. Kami akan memberitahu Anda tentang perubahan apa pun dengan memposting Kebijakan Privasi baru di halaman ini. Anda disarankan untuk meninjau Kebijakan Privasi ini secara berkala untuk setiap perubahan.</p>
 
         <h2>7. Hubungi Kami</h2>
-        <p>Jika Anda memiliki pertanyaan tentang Kebijakan Privasi ini, silakan hubungi kami di: <a href="mailto:support.wara@email.com">support.wara@email.com</a></p>
+        <p>Jika Anda memiliki pertanyaan tentang Kebijakan Privasi ini, silakan hubungi kami di: <a href="mailto:stpimmanuel@gmail.com">stpimmanuel@gmail.com</a></p>
         
         <div class="footer">
             <p>&copy; 2025 Immanuel Sitepu</p>
