--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kebijakan Privasi - Wara'</title>
     <style>
+        /* Simple Vanilla CSS for a clean look */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
             line-height: 1.6;
@@ -47,7 +48,7 @@
         }
         
         a {
-            color: #67a39d;
+            color: #67a39d; /* Menggunakan warna dari logo Anda */
             text-decoration: none;
         }
 
@@ -95,7 +96,7 @@
         <p>Kami mengambil langkah-langkah yang wajar untuk mengamankan data yang ada dalam lingkup kami. Karena pemrosesan data inti terjadi di perangkat Anda, sebagian besar data Anda tidak pernah meninggalkan perangkat Anda, yang merupakan langkah keamanan yang signifikan.</p>
 
         <h2>5. Privasi Anak-Anak</h2>
-        <p>Aplikasi kami tidak ditujukan untuk digunakan oleh siapa pun yang berusia di bawah 13 tahun. Kami tidak secara sadar mengumpulkan informasi yang dapat diidentifikasi secara pribadi dari anak-anak di bawah 13 tahun.</p>
+        <p>Aplikasi ini memiliki rating usia 4+ di App Store, yang berarti kontennya dianggap sesuai untuk khalayak luas. Namun, aplikasi kami tidak secara spesifik dirancang atau ditujukan untuk digunakan oleh anak-anak di bawah usia 13 tahun tanpa pengawasan orang tua. Kami tidak secara sadar mengumpulkan informasi yang dapat diidentifikasi secara pribadi dari anak-anak di bawah 13 tahun. Jika Anda adalah orang tua atau wali dan Anda mengetahui bahwa anak Anda telah memberikan informasi kepada kami, silakan hubungi kami agar kami dapat mengambil tindakan yang diperlukan.</p>
 
         <h2>6. Perubahan pada Kebijakan Privasi Ini</h2>
         <p>Kami dapat memperbarui Kebijakan Privasi kami dari waktu ke waktu. Kami akan memberitahu Anda tentang perubahan apa pun dengan memposting Kebijakan Privasi baru di halaman ini. Anda disarankan untuk meninjau Kebijakan Privasi ini secara berkala untuk setiap perubahan.</p>
